--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13902,16 +13902,21 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
+  background-color: rgba(233, 90, 12, 0.82);
+  max-width: 610px;
+  padding: 10px;
 }
 
 .hero-content > h2 {
-  font-family: 'Rochester', cursive;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .dot-seperator {
@@ -13921,13 +13926,13 @@ html {
 }
 
 .hero-content > .subtitle {
-  text-align: center;
-  color: #777777 !important;
+  text-align: left;
+  color: #fff !important;
   padding: 10px;
 }
 
 .has-white-bg {
-  background-color: white !important;
+  /*background-color:white!important;*/
   padding: 5px;
 }
 
@@ -13950,13 +13955,24 @@ html {
 
 .column.card {
   padding: 0px !important;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
+  border-top-right-radius: 14px;
+  border-top-left-radius: 14px;
 }
 
 .card-image {
   height: 250px;
   overflow: hidden;
+}
+
+.card-content {
+  background-color: #fff;
+  min-height: 300px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.card-content > h1 {
+  color: #e95a0c;
 }
 
 .card-image img {
