--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@import url(https://fonts.googleapis.com/css?family=Rochester);/*@import "~bootstrap-sass/assets/stylesheets/bootstrap";*/
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@import url(https://fonts.googleapis.com/css?family=Rochester);@import url(https://fonts.googleapis.com/css?family=Open+Sans|Patua+One|Roboto);/*@import "~bootstrap-sass/assets/stylesheets/bootstrap";*/
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
@@ -13916,7 +13916,7 @@ a.navbar-item.is-active,
 }
 
 * {
-  font-family: 'source sans pro';
+  font-family: 'Open sans';
 }
 
 body,
@@ -13966,6 +13966,10 @@ html {
 
 .is-2em {
   font-size: 2.5em;
+}
+
+h1.title {
+  font-family: "Patua One";
 }
 
 .hero-content {
