--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13964,6 +13964,10 @@ html {
   background-size: cover;
 }
 
+.navbar-item {
+  font-weight: bolder;
+}
+
 .is-2em {
   font-size: 2.5em;
 }
@@ -13993,7 +13997,7 @@ h1.title {
 }
 
 .hero-content > h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Open sans', sans-serif;
 }
 
 .dot-seperator {
