--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -67,6 +67,10 @@ body, html {
 	background-size: cover;
 }
 
+.navbar-item{
+	font-weight: bolder;
+}
+
 .is-2em{
 	font-size:2.5em;
 }
@@ -77,7 +81,7 @@ h1.title{
 
 .hero-content{
 	>h2{
-		font-family: 'Raleway', sans-serif;
+		font-family: 'Open sans', sans-serif;
 	}
 	display:flex;
 	flex-direction: column;
