--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13964,6 +13964,27 @@ html {
   background-size: cover;
 }
 
+.change-lang {
+  z-index: 1;
+  position: absolute;
+  right: 0px;
+  padding: 10px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  top: 150px;
+  font-size: 1.2em;
+  background-color: #e95a0c;
+  color: white;
+}
+
+.change-lang > a {
+  color: white;
+}
+
+.change-lang > a:hover {
+  font-weight: bold;
+}
+
 .navbar-item {
   font-weight: bolder;
 }
@@ -13974,6 +13995,7 @@ html {
 
 h1.title {
   font-family: "Patua One";
+  text-transform: uppercase;
 }
 
 .hero-content {
